# gem-assist-linux

./: .env.template  .gitignore  LICENSE  README.md  README_UPDATE.md  app.py  assistant.py  assistant_memory.json  colorama_ui_example.py  config.py  core_utils.py  dump_debug_logs.py  git_commands.txt  install_dependencies.sh  main.py  plan.txt  pyproject.toml  setup_github.sh  start_debug.sh  utility.py
assistant/: __init__.py  conversion.py  core.py  display.py  execution.py  messaging.py  reasoning.py  reasoning_validator.py  session.py
config/: __init__.py  prompts.py  prompts.yml  safety_settings.yml  settings.py  themes.yml
docs/: configuration.md
func_to_schema/: __init__.py  vertex_compatibility.py
gem/: builtin_commands.py  command.py  context.py
plugins/: __init__.py  archive_plugin.py  base.py  code_execution_plugin.py  discovery.py  document_plugin.py  example_plugin.py  filesystem_plugin.py  network_plugin.py  registry.py  research_plugin.py  search_plugin.py  system_plugin.py  web_scraper_plugin.py
scripts/: manage_plugin_deps.py  upgrade_dependencies.py
static/: scripts.js  styles.css
templates/: index.html
tests/: test_configuration.py  test_context.py  test_error_handling.py  test_prompts.py  test_reasoning.py  test_research_tools.py  test_system_service.py  test_tool_execution.py  test_youtube_transcript.py
utils/: README.md  __init__.py  archive.py  cleanup.py  code_execution.py  core.py  document_utils.py  filesystem.py  network.py  research.py  search.py  system.py  system_info.py  terminal_ui.py  web_scraper.py
(+26 files in other folders)
