[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gem-assist"
version = "0.1.0"
description = "A Personal Assistant In Your Terminal"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Gem-assist Contributors"}
]
dependencies = [
    "litellm>=1.30.0",
    "prompt_toolkit>=3.0.0",
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "thefuzz>=0.20.0",
    "duckduckgo-search>=4.5.0",
    "praw>=7.7.0",
    "wikipedia>=1.4.0",
    "python-dotenv>=1.0.0",
    "pypdl>=1.2.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
data-analysis = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]
web-scraping = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]
dynamic-web = [
    "selenium>=4.16.0",
]
documents = [
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
]
google-search = [
    "google-api-python-client>=2.100.0",
]
all = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.16.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
    "google-api-python-client>=2.100.0",
]

[project.scripts]
gem-assist = "assistant:main"

[tool.pytest]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["gem"]